--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "command-line-commands": "^0.1.2",
     "polylint": "^2.10.0",
     "polyserve": "^0.7.1",
-    "web-component-tester": "^4.2.0"
+    "web-component-tester": "^4.2.0",
+    "yeoman-environment": "^1.5.2",
   },
   "devDependencies": {
     "typescript": "^1.8.0"
