--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "declaration": false,
     "noImplicitAny": false,
     "removeComments": false,
-    "noLib": false,
+    "noLib": true,
     "preserveConstEnums": true,
     "suppressImplicitAnyIndexErrors": true,
     "outDir": "lib"
@@ -19,9 +19,14 @@
     "!node_modules/**",
     "custom_typings/*.d.ts",
     "typings/main/*.d.ts",
-    "typings/main.d.ts"
+    "typings/main.d.ts",
+    "node_modules/typescript/lib/lib.core.es6.d.ts"
   ],
   "files": [
+    "src/build/build.ts",
+    "src/build/html-project.ts",
+    "src/build/stream-resolver.ts",
+    "src/commands/build.ts",
     "src/commands/command.ts",
     "src/commands/help.ts",
     "src/commands/init.ts",
@@ -31,8 +36,13 @@
     "src/polytool.ts",
     "custom_typings/command-line-args.d.ts",
     "custom_typings/command-line-commands.d.ts",
+    "custom_typings/dom5.d.ts",
+    "custom_typings/hydrolysis.d.ts",
+    "custom_typings/node.d.ts",
     "custom_typings/web-component-tester.d.ts",
-    "typings/main.d.ts"
+    "custom_typings/yeoman-environment.d.ts",
+    "typings/main.d.ts",
+    "node_modules/typescript/lib/lib.core.es6.d.ts"
   ],
   "atom": {
     "rewriteTsconfig": true
