--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/polytool.js",
   "bin": "bin/polytool.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "init": "typings install",
+    "build": "if [ ! -f typings/main.d.ts ]; then npm run init; fi; tsc"
   },
   "repository": {
     "type": "git",
