--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "liftoff": "^2.2.1",
     "polylint": "^2.10.0",
     "polyserve": "^0.7.1",
+    "resolve": "^1.1.7",
     "uglify-js": "^2.6.2",
     "vinyl-fs": "^2.4.3",
     "web-component-tester": "^4.2.0",
