New init template

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,9 +35,11 @@
     "src/commands/serve.ts",
     "src/commands/test.ts",
     "src/polytool.ts",
+    "src/templates/polykart.ts",
     "custom_typings/command-line-args.d.ts",
     "custom_typings/command-line-commands.d.ts",
     "custom_typings/dom5.d.ts",
+    "custom_typings/github.d.ts",
     "custom_typings/hydrolysis.d.ts",
     "custom_typings/node.d.ts",
     "custom_typings/web-component-tester.d.ts",
