--- a/package.json
+++ b/package.json
@@ -20,14 +20,19 @@
     "command-line-commands": "^0.1.2",
     "dom5": "^1.3.1",
     "generator-polymer-init": "^0.0.3",
+    "github": "^0.2.4",
     "gulp": "^3.9.1",
     "gulp-if": "^2.0.0",
     "gulp-vulcanize": "^6.1.0",
+    "gunzip-maybe": "^1.3.1",
     "liftoff": "^2.2.1",
     "minimatch": "^3.0.0",
     "polylint": "^2.10.0",
     "polyserve": "^0.10.0",
+    "request": "^2.72.0",
     "resolve": "^1.1.7",
+    "tar-fs": "^1.12.0",
+    "uglify-js": "^2.6.2",
     "vinyl": "^1.1.1",
     "vinyl-fs": "^2.4.3",
     "web-component-tester": "^4.2.0",
@@ -39,6 +44,7 @@
     "gulp-mocha": "^2.2.0",
     "mocha": "^2.4.5",
     "typescript": "^1.8.10",
-    "typings": "^0.8.1"
+    "typings": "^0.8.1",
+    "yeoman-test": "^1.1.0"
   }
 }
