--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
   "author": "The Polymer Project Authors",
   "license": "BSD-3-Clause",
   "dependencies": {
+    "command-line-args": "^2.1.6",
     "command-line-commands": "^0.1.2",
+    "dom5": "^1.3.1",
     "generator-polymer-init": "^0.0.1",
     "gulp": "^3.9.1",
-    "gulp-crisper": "^1.0.0",
     "gulp-if": "^2.0.0",
     "gulp-vulcanize": "^6.1.0",
-    "hydrolysis": "^1.23.3",
     "liftoff": "^2.2.1",
     "minimatch": "^3.0.0",
     "polylint": "^2.10.0",
     "polyserve": "^0.10.0",
     "resolve": "^1.1.7",
-    "uglify-js": "^2.6.2",
+    "vinyl": "^1.1.1",
     "vinyl-fs": "^2.4.3",
     "web-component-tester": "^4.2.0",
     "yeoman-environment": "^1.5.2"
