--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "yeoman-environment": "^1.5.2"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "depcheck": "^0.6.3",
+    "gulp-mocha": "^2.2.0",
+    "mocha": "^2.4.5",
     "typescript": "^1.8.10",
     "typings": "^0.8.1"
   }
