--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
     "src/build/build.ts",
     "src/build/html-project.ts",
     "src/build/stream-resolver.ts",
+    "src/build/util.ts",
     "src/commands/build.ts",
     "src/commands/command.ts",
     "src/commands/help.ts",
