--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,8 @@
     "src/build/build.ts",
     "src/build/html-project.ts",
     "src/build/stream-resolver.ts",
+    "src/build/uglify-transform.ts",
     "src/build/util.ts",
-    "src/build/uglify-stream.ts",
     "src/commands/build.ts",
     "src/commands/command.ts",
     "src/commands/help.ts",
