--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "init": "typings install",
     "build": "if [ ! -f typings/main.d.ts ]; then npm run init; fi; tsc",
-    "test": "depcheck ."
+    "test": "depcheck . && gulp test"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,9 @@
     "gulp-if": "^2.0.0",
     "gulp-vulcanize": "^6.1.0",
     "gunzip-maybe": "^1.3.1",
+    "hydrolysis": "^1.23.3",
     "liftoff": "^2.2.1",
+    "merge-stream": "^1.0.0",
     "minimatch": "^3.0.0",
     "polylint": "^2.10.0",
     "polyserve": "^0.10.0",
@@ -36,15 +38,16 @@
     "vinyl": "^1.1.1",
     "vinyl-fs": "^2.4.3",
     "web-component-tester": "^4.2.0",
-    "yeoman-environment": "^1.5.2"
+    "yeoman-environment": "^1.5.2",
+    "yeoman-generator": "^0.23.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "depcheck": "^0.6.3",
     "gulp-mocha": "^2.2.0",
-    "mocha": "^2.4.5",
     "typescript": "^1.8.10",
     "typings": "^0.8.1",
+    "yeoman-assert": "^2.2.1",
     "yeoman-test": "^1.1.0"
   }
 }
