Refactor build, add first pass service-worker-generation

--- a/package.json
+++ b/package.json
@@ -31,14 +31,18 @@
     "liftoff": "^2.2.1",
     "merge-stream": "^1.0.0",
     "minimatch": "^3.0.0",
+    "minimatch-all": "^1.0.2",
+    "multipipe": "^0.3.0",
     "polylint": "^2.10.0",
     "polyserve": "^0.10.0",
     "request": "^2.72.0",
     "resolve": "^1.1.7",
+    "sw-precache": "^3.1.1",
     "tar-fs": "^1.12.0",
     "uglify-js": "^2.6.2",
     "vinyl": "^1.1.1",
     "vinyl-fs": "^2.4.3",
+    "web-component-deps": "^1.1.1",
     "web-component-tester": "^4.2.0",
     "yeoman-environment": "^1.5.2",
     "yeoman-generator": "^0.23.3"
