--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "dependencies": {
     "command-line-args": "^2.1.6",
     "command-line-commands": "^0.1.2",
+    "css-slam": "^1.1.0",
     "dom5": "^1.3.1",
     "generator-polymer-init": "^0.0.3",
     "github": "^0.2.4",
     "gulp": "^3.9.1",
+    "gulp-html-minifier": "^0.1.8",
     "gulp-if": "^2.0.0",
     "gulp-vulcanize": "^6.1.0",
     "gunzip-maybe": "^1.3.1",
