--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "dependencies": {
     "command-line-args": "^2.1.6",
     "command-line-commands": "^0.1.2",
+    "css-slam": "^1.1.0",
     "dom5": "^1.3.1",
     "generator-polymer-init": "^0.0.3",
     "github": "^0.2.4",
     "gulp": "^3.9.1",
+    "gulp-html-minifier": "^0.1.8",
     "gulp-if": "^2.0.0",
     "gulp-vulcanize": "^6.1.0",
     "gunzip-maybe": "^1.3.1",
@@ -47,6 +49,7 @@
     "gulp-mocha": "^2.2.0",
     "typescript": "^1.8.10",
     "typings": "^0.8.1",
+    "vinyl-fs-fake": "^1.1.0",
     "yeoman-assert": "^2.2.1",
     "yeoman-test": "^1.1.0"
   }
