--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,7 @@
     "src/commands/lint.ts",
     "src/commands/serve.ts",
     "src/commands/test.ts",
+    "src/github/github.ts",
     "src/polytool.ts",
     "src/templates/polykart.ts",
     "custom_typings/command-line-args.d.ts",
