add --env reyserve for build and serve

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,15 +40,20 @@
     "src/commands/lint.ts",
     "src/commands/serve.ts",
     "src/commands/test.ts",
+    "src/environment/environment.ts",
+    "src/environments/environments.ts",
+    "src/environments/reyserve.ts",
     "src/github/github.ts",
     "src/polymer-cli.ts",
     "src/templates/polykart.ts",
     "custom_typings/command-line-args.d.ts",
     "custom_typings/command-line-commands.d.ts",
     "custom_typings/dom5.d.ts",
+    "custom_typings/fs-extra.d.ts",
     "custom_typings/github.d.ts",
     "custom_typings/hydrolysis.d.ts",
     "custom_typings/node.d.ts",
+    "custom_typings/temp.d.ts",
     "custom_typings/vinyl-fs.d.ts",
     "custom_typings/web-component-tester.d.ts",
     "custom_typings/yeoman-environment.d.ts",
