--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "command-line-commands": "^0.1.2",
     "css-slam": "^1.1.0",
     "dom5": "^1.3.1",
+    "fs-extra": "^0.30.0",
     "generator-polymer-init": "^0.0.3",
     "github": "^0.2.4",
     "gulp": "^3.9.1",
@@ -43,6 +44,7 @@
     "resolve": "^1.1.7",
     "sw-precache": "^3.1.1",
     "tar-fs": "^1.12.0",
+    "temp": "^0.8.3",
     "through2": "^2.0.1",
     "uglify-js": "^2.6.2",
     "vinyl": "^1.1.1",
