add eslint for the javascript tests

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "depcheck": "^0.6.3",
+    "eslint": "^2.9.0",
     "gulp-mocha": "^2.2.0",
     "typescript": "^1.8.10",
     "typings": "^0.8.1",
