Refactor build, add first pass service-worker-generation (#48)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,11 +24,15 @@
   ],
   "files": [
     "src/build/build.ts",
+    "src/build/bundle.ts",
     "src/build/html-project.ts",
     "src/build/logger.ts",
-    "src/build/optimize-pipe.ts",
+    "src/build/optimize.ts",
     "src/build/stream-resolver.ts",
+    "src/build/streams.ts",
+    "src/build/sw-precache.ts",
     "src/build/uglify-transform.ts",
+    "src/build/vulcanize.ts",
     "src/commands/build.ts",
     "src/commands/command.ts",
     "src/commands/help.ts",
