--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "gulp": "^3.9.1",
     "gulp-html-minifier": "^0.1.8",
     "gulp-if": "^2.0.0",
-    "gulp-vulcanize": "^6.1.0",
     "gunzip-maybe": "^1.3.1",
     "hydrolysis": "^1.23.3",
     "liftoff": "^2.2.1",
@@ -39,10 +38,11 @@
     "resolve": "^1.1.7",
     "sw-precache": "^3.1.1",
     "tar-fs": "^1.12.0",
+    "through2": "^2.0.1",
     "uglify-js": "^2.6.2",
     "vinyl": "^1.1.1",
     "vinyl-fs": "^2.4.3",
-    "web-component-deps": "^1.1.1",
+    "vulcanize": "^1.14.8",
     "web-component-tester": "^4.2.0",
     "yeoman-environment": "^1.5.2",
     "yeoman-generator": "^0.23.3"
@@ -50,7 +50,6 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "depcheck": "^0.6.3",
-    "eslint": "^2.9.0",
     "gulp-mocha": "^2.2.0",
     "typescript": "^1.8.10",
     "typings": "^0.8.1",
