--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "chai": "^3.5.0",
     "depcheck": "^0.6.3",
     "gulp-mocha": "^2.2.0",
+    "sinon": "^1.17.4",
     "typescript": "^1.8.10",
     "typings": "^0.8.1",
     "vinyl-fs-fake": "^1.1.0",
