Fix precaching to be consistent
sw-precache reads directly from disk to generate precache manifests, so
we must wait for the streams to be complete before calling
generateServiceWorker.

Read the config file once outside of the stream, let sw-precache write
to disk

Clone config so that bundled and unbundled don't write into each other

Fixes #75

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "The Polymer Project Authors",
   "license": "BSD-3-Clause",
   "dependencies": {
+    "clone": "^1.0.2",
     "command-line-args": "^2.1.6",
     "command-line-commands": "^0.1.2",
     "css-slam": "^1.1.0",
