Fix precaching to be consistent (#76)
* Fix precaching to be consistent

sw-precache reads directly from disk to generate precache manifests, so
we must wait for the streams to be complete before calling
generateServiceWorker.

Read the config file once outside of the stream, let sw-precache write
to disk

Clone config so that bundled and unbundled don't write into each other

Fixes #75

* Add tests for service worker generation

Also handle uncaught promises in build
Remove console.log

* Switch out tmp for temp

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "The Polymer Project Authors",
   "license": "BSD-3-Clause",
   "dependencies": {
+    "clone": "^1.0.2",
     "command-line-args": "^2.1.6",
     "command-line-commands": "^0.1.2",
     "css-slam": "^1.1.0",
@@ -57,6 +58,7 @@
     "eslint": "^2.9.0",
     "gulp-mocha": "^2.2.0",
     "sinon": "^1.17.4",
+    "temp": "^0.8.3",
     "typescript": "^1.8.10",
     "typings": "^0.8.1",
     "vinyl-fs-fake": "^1.1.0",
