--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
     "src/build/html-project.ts",
     "src/build/logger.ts",
     "src/build/optimize.ts",
+    "src/build/prefetch.ts",
     "src/build/stream-resolver.ts",
     "src/build/streams.ts",
     "src/build/sw-precache.ts",
