--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,12 +41,12 @@
     "src/commands/lint.ts",
     "src/commands/serve.ts",
     "src/commands/test.ts",
-    "src/config.ts",
     "src/environment/environment.ts",
     "src/environments/environments.ts",
     "src/environments/reyserve.ts",
     "src/github/github.ts",
     "src/polymer-cli.ts",
+    "src/project-config.ts",
     "src/templates/polykart.ts",
     "custom_typings/command-line-args.d.ts",
     "custom_typings/command-line-commands.d.ts",
