--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "command-line-commands": "^0.1.2",
     "css-slam": "^1.1.0",
     "dom5": "^1.3.1",
+    "findup": "^0.1.5",
     "fs-extra": "^0.30.0",
     "generator-polymer-init": "^0.0.3",
     "github": "^0.2.4",
@@ -34,6 +35,7 @@
     "gulp-if": "^2.0.0",
     "gunzip-maybe": "^1.3.1",
     "hydrolysis": "^1.23.3",
+    "inquirer": "^1.0.2",
     "liftoff": "^2.2.1",
     "merge-stream": "^1.0.0",
     "minimatch-all": "^1.0.2",
