--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "The Polymer Project Authors",
   "license": "BSD-3-Clause",
   "dependencies": {
+    "chalk": "^1.1.3",
     "clone": "^1.0.2",
     "command-line-args": "^2.1.6",
     "command-line-commands": "^0.1.2",
