--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,9 +45,9 @@
     "src/environments/environments.ts",
     "src/environments/reyserve.ts",
     "src/github/github.ts",
+    "src/init/github.ts",
     "src/polymer-cli.ts",
     "src/project-config.ts",
-    "src/templates/polykart.ts",
     "custom_typings/command-line-args.d.ts",
     "custom_typings/command-line-commands.d.ts",
     "custom_typings/dom5.d.ts",
