--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-html-minifier": "^0.1.8",
     "gulp-if": "^2.0.0",
     "gunzip-maybe": "^1.3.1",
+    "http2-push-manifest": "^1.0.0",
     "hydrolysis": "^1.23.3",
     "inquirer": "^1.0.2",
     "liftoff": "^2.2.1",
