--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,7 @@
     "src/build/logger.ts",
     "src/build/optimize.ts",
     "src/build/prefetch.ts",
+    "src/build/push-manifest.ts",
     "src/build/stream-resolver.ts",
     "src/build/streams.ts",
     "src/build/sw-precache.ts",
