init templates: add main entry in bower.json

--- a/src/init/application/templates/bower.json
+++ b/src/init/application/templates/bower.json
@@ -2,6 +2,7 @@
   "name": "<%= name %>",
 <% if (description) { -%>  "description": "<%= description %>",
 <% } -%>
+  "main": "index.html",
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0"
   },
