--- a/src/init/element/templates/bower.json
+++ b/src/init/element/templates/bower.json
@@ -2,6 +2,7 @@
   "name": "<%= name %>",
 <% if (description) { -%>  "description": "<%= description %>",
 <% } -%>
+  "main": "<%= name %>",
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0"
   },
