--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "polymer": "bin/polymer.js"
   },
   "scripts": {
-    "lint": "depcheck . --ignores 'generator-polymer-init' && eslint test/",
+    "lint": "gulp lint",
     "init": "gulp init",
     "build": "gulp build",
     "test": "gulp test"
@@ -62,7 +62,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "depcheck": "^0.6.3",
-    "eslint": "^2.9.0",
+    "gulp-eslint": "^2.0.0",
     "gulp-mocha": "^2.2.0",
     "gulp-typescript": "^2.13.4",
     "gulp-typings": "^1.3.6",
