--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "depcheck . --ignores 'generator-polymer-init' && eslint test/",
     "init": "gulp init",
     "build": "gulp build",
-    "test": "gulp test"
+    "test": "gulp test",
+    "prepublish": "gulp build-all"
   },
   "repository": {
     "type": "git",
@@ -66,6 +67,7 @@
     "gulp-mocha": "^2.2.0",
     "gulp-typescript": "^2.13.4",
     "gulp-typings": "^1.3.6",
+    "run-sequence": "^1.2.0",
     "sinon": "^1.17.4",
     "temp": "^0.8.3",
     "vinyl-fs-fake": "^1.1.0",
