--- a/package.json
+++ b/package.json
@@ -64,12 +64,15 @@
     "chai": "^3.5.0",
     "depcheck": "^0.6.3",
     "eslint": "^2.9.0",
+    "gulp-eslint": "^2.0.0",
     "gulp-mocha": "^2.2.0",
+    "gulp-tslint": "^5.0.0",
     "gulp-typescript": "^2.13.4",
     "gulp-typings": "^1.3.6",
     "run-sequence": "^1.2.0",
     "sinon": "^1.17.4",
     "temp": "^0.8.3",
+    "tslint": "^3.10.2",
     "vinyl-fs-fake": "^1.1.0",
     "yeoman-assert": "^2.2.1",
     "yeoman-test": "^1.1.0"
