--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "command-line-commands": "^0.1.2",
     "css-slam": "^1.1.0",
     "dom5": "^1.3.1",
-    "findup": "^0.1.5",
+    "findup-sync": "^0.4.1",
     "fs-extra": "^0.30.0",
     "generator-polymer-init": "^0.0.3",
     "github": "^0.2.4",
