--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "clone": "^1.0.2",
-    "command-line-args": "^2.1.6",
-    "command-line-commands": "^0.1.2",
+    "command-line-args": "^3.0.0",
+    "command-line-commands": "^1.0.3",
+    "command-line-usage": "^3.0.1",
     "css-slam": "^1.1.0",
     "dom5": "^1.3.1",
     "findup": "^0.1.5",
