capture mid-rebase changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,7 @@
     "src/build/streams.ts",
     "src/build/sw-precache.ts",
     "src/build/uglify-transform.ts",
+    "src/build/url-from-path.ts",
     "src/commands/build.ts",
     "src/commands/command.ts",
     "src/commands/help.ts",
@@ -57,6 +58,7 @@
     "custom_typings/hydrolysis.d.ts",
     "custom_typings/node.d.ts",
     "custom_typings/plylog.d.ts",
+    "custom_typings/slash.d.ts",
     "custom_typings/temp.d.ts",
     "custom_typings/vinyl-fs.d.ts",
     "custom_typings/web-component-tester.d.ts",
