Move build stream to use polymer-build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,10 +23,7 @@
   ],
   "files": [
     "src/args.ts",
-    "src/build/analyzer.ts",
     "src/build/build.ts",
-    "src/build/bundle.ts",
-    "src/build/html-project.ts",
     "src/build/optimize.ts",
     "src/build/prefetch.ts",
     "src/build/streams.ts",
@@ -57,8 +54,8 @@
     "custom_typings/hydrolysis.d.ts",
     "custom_typings/node.d.ts",
     "custom_typings/plylog.d.ts",
+    "custom_typings/polymer-build.d.ts",
     "custom_typings/temp.d.ts",
-    "custom_typings/vinyl-fs.d.ts",
     "custom_typings/web-component-tester.d.ts",
     "custom_typings/yeoman-environment.d.ts",
     "custom_typings/yeoman-generator.d.ts",
