--- a/package.json
+++ b/package.json
@@ -37,25 +37,21 @@
     "gulp-html-minifier": "^0.1.8",
     "gulp-if": "^2.0.0",
     "gunzip-maybe": "^1.3.1",
-    "hydrolysis": "^1.23.3",
     "inquirer": "^1.0.2",
     "merge-stream": "^1.0.0",
-    "minimatch-all": "^1.0.2",
     "multipipe": "^0.3.0",
     "plylog": "^0.4.0",
     "polylint": "^2.10.0",
+    "polymer-build": "^0.2.0",
     "polyserve": "^0.12.0",
     "request": "^2.72.0",
     "resolve": "^1.1.7",
     "sw-precache": "^3.1.1",
     "tar-fs": "^1.12.0",
     "temp": "^0.8.3",
-    "through2": "^2.0.1",
     "uglify-js": "^2.6.2",
     "update-notifier": "^1.0.0",
     "vinyl": "^1.1.1",
-    "vinyl-fs": "^2.4.3",
-    "vulcanize": "^1.14.8",
     "web-component-tester": "^4.2.0",
     "yeoman-environment": "^1.5.2",
     "yeoman-generator": "^0.23.3"
