Add back custom optimize streams that will warn on error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
   "files": [
     "src/args.ts",
     "src/build/build.ts",
+    "src/build/optimize-streams.ts",
     "src/build/prefetch.ts",
     "src/build/streams.ts",
     "src/build/sw-precache.ts",
@@ -46,6 +47,7 @@
     "custom_typings/command-line-args.d.ts",
     "custom_typings/command-line-commands.d.ts",
     "custom_typings/command-line-usage.d.ts",
+    "custom_typings/css-slam.d.ts",
     "custom_typings/dom5.d.ts",
     "custom_typings/fs-extra.d.ts",
     "custom_typings/github.d.ts",
