--- a/package.json
+++ b/package.json
@@ -33,10 +33,9 @@
     "fs-extra": "^0.30.0",
     "github": "^1.1.0",
     "gulp": "^3.9.1",
-    "gulp-html-minifier": "^0.1.8",
     "gulp-if": "^2.0.0",
-    "gulp-uglify": "^1.5.4",
     "gunzip-maybe": "^1.3.1",
+    "html-minifier": "^3.0.1",
     "inquirer": "^1.0.2",
     "merge-stream": "^1.0.0",
     "multipipe": "^0.3.0",
@@ -48,6 +47,7 @@
     "resolve": "^1.1.7",
     "tar-fs": "^1.12.0",
     "temp": "^0.8.3",
+    "uglify-js": "^2.7.0",
     "update-notifier": "^1.0.0",
     "vinyl": "^1.1.1",
     "web-component-tester": "^4.2.0",
