--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "findup": "^0.1.5",
     "fs-extra": "^0.30.0",
     "github": "^1.1.0",
-    "gulp": "^3.9.1",
     "gulp-if": "^2.0.0",
     "gunzip-maybe": "^1.3.1",
     "html-minifier": "^3.0.1",
@@ -50,6 +49,7 @@
     "uglify-js": "^2.7.0",
     "update-notifier": "^1.0.0",
     "vinyl": "^1.1.1",
+    "vinyl-fs": "^2.4.3",
     "web-component-tester": "^4.2.0",
     "yeoman-environment": "^1.5.2",
     "yeoman-generator": "^0.23.3"
@@ -57,6 +57,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "depcheck": "^0.6.3",
+    "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
     "gulp-mocha": "^2.2.0",
     "gulp-tslint": "^5.0.0",
