--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "parse5": "^2.2.3",
     "plylog": "^0.4.0",
     "polylint": "^2.10.0",
+    "polymer-analyzer": "^2.0.0-alpha.17",
     "polymer-build": "^0.5.0",
     "polymer-project-config": "^1.0.0",
     "polyserve": "0.16.0-prerelease.3",
