--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "yeoman-generator": "^0.23.3"
   },
   "devDependencies": {
+    "bower": "^1.7.9",
     "chai": "^3.5.0",
     "depcheck": "^0.6.3",
     "gulp": "^3.9.1",
