--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "plylog": "^0.4.0",
     "polylint": "^2.10.0",
     "polymer-build": "^0.5.0",
+    "polymer-project-config": "^1.0.0",
     "polyserve": "^0.13.0",
     "request": "^2.72.0",
     "resolve": "^1.1.7",
