--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   "author": "The Polymer Project Authors",
   "license": "BSD-3-Clause",
   "dependencies": {
+    "@types/inquirer": "0.0.29",
     "chalk": "^1.1.3",
     "command-line-args": "^3.0.0",
     "command-line-commands": "^1.0.3",
     "command-line-usage": "^3.0.1",
     "css-slam": "^1.1.0",
     "dom5": "^1.3.1",
-    "findup": "^0.1.5",
+    "findup-sync": "^0.4.2",
     "fs-extra": "^0.30.0",
     "github": "^1.1.0",
     "gulp-if": "^2.0.0",
@@ -61,11 +62,12 @@
     "gulp-eslint": "^2.0.0",
     "gulp-mocha": "^2.2.0",
     "gulp-tslint": "^5.0.0",
-    "gulp-typescript": "^2.13.4",
+    "gulp-typescript": "^3.0.0",
     "gulp-typings": "^2.0.0",
     "run-sequence": "^1.2.0",
     "sinon": "^1.17.4",
     "tslint": "^3.10.2",
+    "typescript": "^2.0.3",
     "vinyl-fs-fake": "^1.1.0",
     "yeoman-assert": "^2.2.1",
     "yeoman-test": "^1.1.0"
