--- a/package.json
+++ b/package.json
@@ -23,7 +23,16 @@
   "author": "The Polymer Project Authors",
   "license": "BSD-3-Clause",
   "dependencies": {
+    "@types/fs-extra": "0.0.32",
+    "@types/gulp-if": "0.0.30",
+    "@types/html-minifier": "^1.1.30",
     "@types/inquirer": "0.0.29",
+    "@types/request": "0.0.31",
+    "@types/temp": "^0.8.28",
+    "@types/uglify-js": "^2.6.28",
+    "@types/vinyl": "^1.1.29",
+    "@types/vinyl-fs": "0.0.28",
+    "@types/yeoman-generator": "0.0.30",
     "chalk": "^1.1.3",
     "command-line-args": "^3.0.0",
     "command-line-commands": "^1.0.3",
@@ -63,7 +72,6 @@
     "gulp-mocha": "^2.2.0",
     "gulp-tslint": "^5.0.0",
     "gulp-typescript": "^3.0.0",
-    "gulp-typings": "^2.0.0",
     "run-sequence": "^1.2.0",
     "sinon": "^1.17.4",
     "tslint": "^3.10.2",
