clear the build directory before building

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "The Polymer Project Authors",
   "license": "BSD-3-Clause",
   "dependencies": {
+    "@types/del": "^2.2.31",
     "@types/fs-extra": "0.0.32",
     "@types/gulp-if": "0.0.30",
     "@types/html-minifier": "^1.1.30",
@@ -38,6 +39,7 @@
     "command-line-commands": "^1.0.3",
     "command-line-usage": "^3.0.1",
     "css-slam": "^1.1.0",
+    "del": "^2.2.2",
     "dom5": "^1.3.1",
     "findup-sync": "^0.4.2",
     "fs-extra": "^0.30.0",
