--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "The Polymer Project Authors",
   "license": "BSD-3-Clause",
   "dependencies": {
+    "@types/babel-core": "^6.7.14",
     "@types/chalk": "^0.4.31",
     "@types/del": "^2.2.31",
     "@types/findup-sync": "^0.3.29",
@@ -39,6 +40,8 @@
     "@types/vinyl": "^2.0.0",
     "@types/vinyl-fs": "0.0.28",
     "@types/yeoman-generator": "0.0.30",
+    "babel-core": "^6.17.0",
+    "babel-preset-es2015": "^6.18.0",
     "bower": "1.8.0",
     "bower-json": "^0.8.1",
     "bower-logger": "^0.2.2",
