--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "@types/fs-extra": "0.0.34",
     "@types/gulp-if": "0.0.30",
     "@types/html-minifier": "^1.1.30",
-    "@types/inquirer": "0.0.29",
+    "@types/inquirer": "0.0.30",
     "@types/node": "^6.0.41",
-    "@types/request": "0.0.31",
+    "@types/parse5": "^2.2.33",
+    "@types/request": "0.0.32",
     "@types/temp": "^0.8.28",
     "@types/uglify-js": "^2.6.28",
     "@types/vinyl": "^1.1.29",
@@ -40,7 +41,7 @@
     "command-line-usage": "^3.0.1",
     "css-slam": "^1.1.0",
     "del": "^2.2.2",
-    "dom5": "^1.3.1",
+    "dom5": "^2.0.1",
     "findup-sync": "^0.4.2",
     "fs-extra": "^1.0.0",
     "github": "^1.1.0",
@@ -49,6 +50,7 @@
     "html-minifier": "^3.0.1",
     "inquirer": "^1.0.2",
     "merge-stream": "^1.0.0",
+    "parse5": "^2.2.3",
     "plylog": "^0.4.0",
     "polylint": "^2.10.0",
     "polymer-build": "^0.4.1",
