add missing types, remove custom types

--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   "author": "The Polymer Project Authors",
   "license": "BSD-3-Clause",
   "dependencies": {
+    "@types/chalk": "^0.4.31",
     "@types/del": "^2.2.31",
+    "@types/findup-sync": "^0.3.29",
     "@types/fs-extra": "0.0.34",
     "@types/gulp-if": "0.0.30",
     "@types/html-minifier": "^1.1.30",
     "@types/inquirer": "0.0.30",
+    "@types/merge-stream": "^1.0.28",
     "@types/node": "^6.0.41",
     "@types/parse5": "^2.2.33",
     "@types/request": "0.0.32",
