--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
   "devDependencies": {
     "bower": "^1.7.9",
     "chai": "^3.5.0",
-    "clang-format": "^1.0.45",
+    "clang-format": "=1.0.45",
     "depcheck": "^0.6.3",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
