Update typescript, tslint and some typings

--- a/package.json
+++ b/package.json
@@ -26,17 +26,17 @@
     "@types/chalk": "^0.4.31",
     "@types/del": "^2.2.31",
     "@types/findup-sync": "^0.3.29",
-    "@types/fs-extra": "0.0.34",
+    "@types/fs-extra": "0.0.35",
     "@types/gulp-if": "0.0.30",
     "@types/html-minifier": "^1.1.30",
-    "@types/inquirer": "0.0.30",
+    "@types/inquirer": "0.0.32",
     "@types/merge-stream": "^1.0.28",
-    "@types/node": "^6.0.41",
+    "@types/node": "0.0.2",
     "@types/parse5": "^2.2.33",
-    "@types/request": "0.0.32",
+    "@types/request": "0.0.36",
     "@types/temp": "^0.8.28",
     "@types/uglify-js": "^2.6.28",
-    "@types/vinyl": "^1.1.29",
+    "@types/vinyl": "^2.0.0",
     "@types/vinyl-fs": "0.0.28",
     "@types/yeoman-generator": "0.0.30",
     "bower": "1.8.0",
@@ -84,12 +84,12 @@
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
     "gulp-mocha": "^3.0.1",
-    "gulp-tslint": "^5.0.0",
+    "gulp-tslint": "^7.0.1",
     "gulp-typescript": "^3.0.0",
     "run-sequence": "^1.2.0",
     "sinon": "^1.17.4",
-    "tslint": "^3.10.2",
-    "typescript": "^2.0.3",
+    "tslint": "^4.0.2",
+    "typescript": "^2.1.4",
     "vinyl-fs-fake": "^1.1.0",
     "yeoman-assert": "^2.2.1",
     "yeoman-test": "^1.1.0"
