--- a/package.json
+++ b/package.json
@@ -56,12 +56,12 @@
     "gunzip-maybe": "^1.3.1",
     "html-minifier": "^3.0.1",
     "inquirer": "^1.0.2",
-    "merge-stream": "^1.0.0",
+    "merge-stream": "^1.0.1",
     "parse5": "^2.2.3",
     "plylog": "^0.4.0",
     "polylint": "^2.10.0",
     "polymer-analyzer": "2.0.0-alpha.18",
-    "polymer-build": "^0.5.1",
+    "polymer-build": "0.6.0-alpha.1",
     "polymer-project-config": "^1.0.0",
     "polyserve": "0.16.0-prerelease.6",
     "request": "^2.72.0",
