Lazy load big dependencies, reducing file size to 118MB production install

--- a/package.json
+++ b/package.json
@@ -23,22 +23,6 @@
   "author": "The Polymer Project Authors",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "@types/chalk": "^0.4.31",
-    "@types/del": "^2.2.31",
-    "@types/findup-sync": "^0.3.29",
-    "@types/fs-extra": "0.0.35",
-    "@types/gulp-if": "0.0.30",
-    "@types/html-minifier": "^1.1.30",
-    "@types/inquirer": "0.0.32",
-    "@types/merge-stream": "^1.0.28",
-    "@types/node": "0.0.2",
-    "@types/parse5": "^2.2.33",
-    "@types/request": "0.0.36",
-    "@types/temp": "^0.8.28",
-    "@types/uglify-js": "^2.6.28",
-    "@types/vinyl": "^2.0.0",
-    "@types/vinyl-fs": "0.0.28",
-    "@types/yeoman-generator": "0.0.30",
     "bower": "1.8.0",
     "bower-json": "^0.8.1",
     "bower-logger": "^0.2.2",
@@ -65,18 +49,32 @@
     "polymer-project-config": "^1.0.0",
     "polyserve": "0.16.0-prerelease.6",
     "request": "^2.72.0",
+    "requireg": "^0.1.6",
     "resolve": "^1.1.7",
     "tar-fs": "^1.12.0",
     "temp": "^0.8.3",
     "uglify-js": "^2.7.0",
     "update-notifier": "^1.0.0",
     "vinyl": "^1.1.1",
-    "vinyl-fs": "^2.4.3",
-    "web-component-tester": "6.0.0-prerelease.1",
-    "yeoman-environment": "^1.5.2",
-    "yeoman-generator": "^0.23.3"
+    "vinyl-fs": "^2.4.3"
   },
   "devDependencies": {
+    "@types/chalk": "^0.4.31",
+    "@types/del": "^2.2.31",
+    "@types/findup-sync": "^0.3.29",
+    "@types/fs-extra": "0.0.35",
+    "@types/gulp-if": "0.0.30",
+    "@types/html-minifier": "^1.1.30",
+    "@types/inquirer": "0.0.32",
+    "@types/merge-stream": "^1.0.28",
+    "@types/node": "0.0.2",
+    "@types/parse5": "^2.2.33",
+    "@types/request": "0.0.36",
+    "@types/temp": "^0.8.28",
+    "@types/uglify-js": "^2.6.28",
+    "@types/vinyl": "^2.0.0",
+    "@types/vinyl-fs": "0.0.28",
+    "@types/yeoman-generator": "0.0.30",
     "bower": "^1.7.9",
     "chai": "^3.5.0",
     "clang-format": "=1.0.45",
@@ -92,6 +90,9 @@
     "typescript": "^2.1.4",
     "vinyl-fs-fake": "^1.1.0",
     "yeoman-assert": "^2.2.1",
-    "yeoman-test": "^1.1.0"
+    "yeoman-environment": "^1.5.2",
+    "yeoman-generator": "^0.23.3",
+    "yeoman-test": "^1.1.0",
+    "web-component-tester": "6.0.0-prerelease.1"
   }
 }
