--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/vinyl-fs": "0.0.28",
     "@types/yeoman-generator": "0.0.30",
     "babel-core": "^6.17.0",
+    "babel-preset-babili": "0.0.9",
     "babel-preset-es2015": "^6.18.0",
     "bower": "1.8.0",
     "bower-json": "^0.8.1",
@@ -71,7 +72,6 @@
     "resolve": "^1.1.7",
     "tar-fs": "^1.12.0",
     "temp": "^0.8.3",
-    "uglify-js": "^2.7.0",
     "update-notifier": "^1.0.0",
     "vinyl": "^1.1.1",
     "vinyl-fs": "^2.4.3",
