--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "The Polymer Project Authors",
   "license": "BSD-3-Clause",
   "dependencies": {
+    "@types/babel-core": "^6.7.14",
     "@types/chalk": "^0.4.31",
     "@types/del": "^2.2.31",
     "@types/findup-sync": "^0.3.29",
@@ -39,6 +40,9 @@
     "@types/vinyl": "^2.0.0",
     "@types/vinyl-fs": "0.0.28",
     "@types/yeoman-generator": "0.0.30",
+    "babel-core": "^6.17.0",
+    "babel-preset-babili": "0.0.9",
+    "babel-preset-es2015": "^6.18.0",
     "bower": "1.8.0",
     "bower-json": "^0.8.1",
     "bower-logger": "^0.2.2",
@@ -68,7 +72,6 @@
     "resolve": "^1.1.7",
     "tar-fs": "^1.12.0",
     "temp": "^0.8.3",
-    "uglify-js": "^2.7.0",
     "update-notifier": "^1.0.0",
     "vinyl": "^1.1.1",
     "vinyl-fs": "^2.4.3",
