--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "update-notifier": "^1.0.0",
     "vinyl": "^1.1.1",
     "vinyl-fs": "^2.4.3",
-    "web-component-tester": "6.0.0-prerelease.4",
+    "web-component-tester": "^6.0.0-prerelease.5",
     "yeoman-environment": "^1.5.2",
     "yeoman-generator": "^1.0.1"
   },
