--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "0.0.2",
     "@types/parse5": "^2.2.33",
     "@types/request": "0.0.36",
+    "@types/semver": "^5.3.30",
     "@types/temp": "^0.8.28",
     "@types/uglify-js": "^2.6.28",
     "@types/vinyl": "^2.0.0",
@@ -70,6 +71,7 @@
     "polyserve": "0.16.0-prerelease.9",
     "request": "^2.72.0",
     "resolve": "^1.1.7",
+    "semver": "^5.3.0",
     "tar-fs": "^1.12.0",
     "temp": "^0.8.3",
     "update-notifier": "^1.0.0",
