--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "@types/inquirer": "0.0.32",
     "@types/merge-stream": "^1.0.28",
     "@types/parse5": "^2.2.33",
-    "@types/request": "0.0.36",
+    "@types/request": "0.0.39",
     "@types/semver": "^5.3.30",
     "@types/temp": "^0.8.28",
     "@types/uglify-js": "^2.6.28",
     "@types/vinyl": "^2.0.0",
     "@types/vinyl-fs": "0.0.28",
-    "@types/yeoman-generator": "0.0.30",
+    "@types/yeoman-generator": "^1.0.0",
     "babel-core": "^6.17.0",
     "babel-preset-babili": "0.0.10",
     "babel-preset-es2015": "^6.18.0",
