--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "fs-extra": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
-    "gulp-mocha": "^3.0.1",
+    "gulp-spawn-mocha": "^3.1.0",
     "gulp-tslint": "^7.0.1",
     "gulp-typescript": "^3.0.0",
     "memory-streams": "^0.1.0",
