--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
+sudo: required
+dist: trusty
+addons:
+  firefox: 'latest'
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 language: node_js
 node_js:
-  - "7"
-  - "6"
   - "4"
-sudo: false
-before_script:
-  - npm run build
+  - "6"
+  - "7"
 script:
-  - npm test
+  - xvfb-run npm test
