--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,7 @@ test_script:
   - node --version
   - npm --version
   # run tests
-  - npm run test
+  - npm test
 
 # Don't actually build.
 build: off
