Update outdated dependencies (#557)
* remove shrinkwrap during update

* update fs-extra@v2.0.0, move to devDependencies

* remove unneeded @types/node

* update to latest polymer-build@v0.7.1

* update babel-preset-babili@v0.0.10

* update gulp-eslint@v3.0.1

* update types

* regen shrinkwrap

* update changelog

--- a/package.json
+++ b/package.json
@@ -27,22 +27,20 @@
     "@types/chalk": "^0.4.31",
     "@types/del": "^2.2.31",
     "@types/findup-sync": "^0.3.29",
-    "@types/fs-extra": "0.0.35",
     "@types/gulp-if": "0.0.30",
     "@types/html-minifier": "^1.1.30",
     "@types/inquirer": "0.0.32",
     "@types/merge-stream": "^1.0.28",
-    "@types/node": "0.0.2",
     "@types/parse5": "^2.2.33",
-    "@types/request": "0.0.36",
+    "@types/request": "0.0.39",
     "@types/semver": "^5.3.30",
     "@types/temp": "^0.8.28",
     "@types/uglify-js": "^2.6.28",
     "@types/vinyl": "^2.0.0",
     "@types/vinyl-fs": "0.0.28",
-    "@types/yeoman-generator": "0.0.30",
+    "@types/yeoman-generator": "^1.0.0",
     "babel-core": "^6.17.0",
-    "babel-preset-babili": "0.0.9",
+    "babel-preset-babili": "0.0.10",
     "babel-preset-es2015": "^6.18.0",
     "bower": "1.8.0",
     "bower-json": "^0.8.1",
@@ -55,7 +53,6 @@
     "del": "^2.2.2",
     "dom5": "^2.0.1",
     "findup-sync": "^0.4.2",
-    "fs-extra": "^1.0.0",
     "github": "^7.2.1",
     "gulp-if": "^2.0.0",
     "gunzip-maybe": "^1.3.1",
@@ -66,7 +63,7 @@
     "plylog": "^0.4.0",
     "polylint": "^2.10.0",
     "polymer-analyzer": "2.0.0-alpha.20",
-    "polymer-build": "^0.6.0",
+    "polymer-build": "^0.7.1",
     "polymer-project-config": "^1.2.0",
     "polyserve": "0.16.0-prerelease.9",
     "request": "^2.72.0",
@@ -82,11 +79,13 @@
     "yeoman-generator": "^1.0.1"
   },
   "devDependencies": {
+    "@types/fs-extra": "0.0.37",
     "chai": "^3.5.0",
     "clang-format": "=1.0.45",
     "depcheck": "^0.6.3",
+    "fs-extra": "^2.0.0",
     "gulp": "^3.9.1",
-    "gulp-eslint": "^2.0.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^3.0.1",
     "gulp-tslint": "^7.0.1",
     "gulp-typescript": "^3.0.0",
