--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "polymer-analyzer": "2.0.0-alpha.20",
     "polymer-build": "^0.7.1",
     "polymer-project-config": "^1.2.0",
-    "polyserve": "0.16.0-prerelease.9",
+    "polyserve": "^0.16.0",
     "request": "^2.72.0",
     "resolve": "^1.1.7",
     "semver": "^5.3.0",
