--- a/package.json
+++ b/package.json
@@ -62,10 +62,10 @@
     "parse5": "^2.2.3",
     "plylog": "^0.4.0",
     "polylint": "^2.10.0",
-    "polymer-analyzer": "2.0.0-alpha.20",
-    "polymer-build": "^0.7.1",
+    "polymer-analyzer": "2.0.0-alpha.24",
+    "polymer-build": "^0.8.0",
     "polymer-project-config": "^1.2.0",
-    "polyserve": "0.16.0-prerelease.9",
+    "polyserve": "0.16.0",
     "request": "^2.72.0",
     "resolve": "^1.1.7",
     "semver": "^5.3.0",
