Update build and analyzer (#568)
* Update dependencies.

* Update to new v0.8.0 build APIs.

* Fix compiler warnings, update shrinkwrap.

--- a/package.json
+++ b/package.json
@@ -62,10 +62,10 @@
     "parse5": "^2.2.3",
     "plylog": "^0.4.0",
     "polylint": "^2.10.0",
-    "polymer-analyzer": "2.0.0-alpha.20",
-    "polymer-build": "^0.7.1",
+    "polymer-analyzer": "2.0.0-alpha.24",
+    "polymer-build": "^0.8.0",
     "polymer-project-config": "^1.2.0",
-    "polyserve": "0.16.0-prerelease.9",
+    "polyserve": "0.16.0",
     "request": "^2.72.0",
     "resolve": "^1.1.7",
     "semver": "^5.3.0",
@@ -80,6 +80,7 @@
   },
   "devDependencies": {
     "@types/fs-extra": "0.0.37",
+    "@types/node": "^4.2.2",
     "chai": "^3.5.0",
     "clang-format": "=1.0.45",
     "depcheck": "^0.6.3",
@@ -92,7 +93,7 @@
     "run-sequence": "^1.2.0",
     "sinon": "^1.17.4",
     "tslint": "^4.0.2",
-    "typescript": "^2.1.4",
+    "typescript": "^2.2.0",
     "vinyl-fs-fake": "^1.1.0",
     "yeoman-assert": "^2.2.1",
     "yeoman-test": "^1.1.0"
