--- a/package.json
+++ b/package.json
@@ -91,7 +91,9 @@
     "gulp-spawn-mocha": "^3.1.0",
     "gulp-tslint": "^7.0.1",
     "gulp-typescript": "^3.0.0",
+    "istanbul": "^0.4",
     "memory-streams": "^0.1.0",
+    "mocha": "^3.0",
     "run-sequence": "^1.2.0",
     "sinon": "^1.17.4",
     "tmp": "0.0.31",
