Run integration tests on travis (#563)
* Run integration tests by default. Skip broken tests.

* Get integration tests running, reduce chattiness of output on success.

* Try deleting the bower cache and doing an online install to see if that works on travis.

* Improve output of run-command slightly.

* Disable "polymer test" in integration tests.

* Use 'polymer install' rather than 'bower install'.

./node_modules/.bin/bower isn't a node script on windows? Appveyor was failing.

* Minor cleanup

* Add documentation for clarity.

* Remove lint from smoke tests.

* npm shrinkwrap graaaaar

* shinkwrap is love. shrinkwrap is life.

* Overwrite bower env vars when intentionally loading offline.

* Pass along all env vars except bower ones.

* Explicitly blank out bower env vars

* A bunch of env var debug printing.

* Turn off no-console eslint rule.

* Revert env code, install variants online for now, add github token for quota purposes.

* Or maybe the env stuff does work?

* lint

* Add some documentation for clarity. Also resolve runCommand with stdout+stderr.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "lint": "gulp lint",
     "build": "gulp build",
-    "test": "gulp lint test",
+    "test": "gulp lint test && gulp test:integration",
+    "test:smoke": "gulp test",
     "prepublish": "npm run build && npm test",
     "format": "find src test | grep '\\.js$\\|\\.ts$' | xargs clang-format --style=file -i"
   },
@@ -90,8 +91,10 @@
     "gulp-mocha": "^3.0.1",
     "gulp-tslint": "^7.0.1",
     "gulp-typescript": "^3.0.0",
+    "memory-streams": "^0.1.0",
     "run-sequence": "^1.2.0",
     "sinon": "^1.17.4",
+    "tmp": "0.0.31",
     "tslint": "^4.0.2",
     "typescript": "^2.2.0",
     "vinyl-fs-fake": "^1.1.0",
