Add new linter alongside the old one. (#566)
* Use gulp-spawn-mocha, lazy load linter lib.

* Add polymer.json files to init templates.

* Depend on polymer-linter

* Add more todos, hook up a couple command line args.

* Lint in integration tests again.

* Update changelog

* Update TODOs

* Add an integration test for the lint command.

* Add rule descriptions to `polymer help lint`.

* Preserve the old linter for now as LegacyLinter.

* Update description of new linter.

* Revert changes to legacy linter.

* Defer as much loading as possible in new lint implementation.

* Pull lint command implementation out, reword changelog.

* Summarize lint failure results. Leave polymer.js in charge of exiting.

* re-re-re-regenerate shrinkwrap because rebase

* A command may exit normally with an exit code.

Also removed a lot of unneessary Promise<any>.

* Document extraUsageGroups

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "build": "gulp build",
     "test": "gulp lint test && gulp test:integration",
     "test:smoke": "gulp test",
-    "prepublish": "npm run build && npm test",
-    "format": "find src test | grep '\\.js$\\|\\.ts$' | xargs clang-format --style=file -i"
+    "format": "find src test | grep '\\.js$\\|\\.ts$' | xargs clang-format --style=file -i",
+    "prepublish": "npm test"
   },
   "repository": {
     "type": "git",
@@ -65,8 +65,9 @@
     "polylint": "^2.10.0",
     "polymer-analyzer": "2.0.0-alpha.24",
     "polymer-build": "^0.8.0",
-    "polymer-project-config": "^1.2.0",
-    "polyserve": "0.16.0",
+    "polymer-linter": "^0.1.2",
+    "polymer-project-config": "^2.0.0",
+    "polyserve": "^0.16.0",
     "request": "^2.72.0",
     "resolve": "^1.1.7",
     "semver": "^5.3.0",
@@ -88,10 +89,12 @@
     "fs-extra": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
-    "gulp-mocha": "^3.0.1",
+    "gulp-spawn-mocha": "^3.1.0",
     "gulp-tslint": "^7.0.1",
     "gulp-typescript": "^3.0.0",
+    "istanbul": "^0.4",
     "memory-streams": "^0.1.0",
+    "mocha": "^3.0",
     "run-sequence": "^1.2.0",
     "sinon": "^1.17.4",
     "tmp": "0.0.31",
