Move as much logic as possible out of bin/polymer.js

--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "@types/merge-stream": "^1.0.28",
     "@types/parse5": "^2.2.33",
     "@types/request": "0.0.39",
+    "@types/resolve": "0.0.4",
     "@types/semver": "^5.3.30",
     "@types/temp": "^0.8.28",
     "@types/uglify-js": "^2.6.28",
+    "@types/update-notifier": "^1.0.0",
     "@types/vinyl": "^2.0.0",
     "@types/vinyl-fs": "0.0.28",
     "@types/yeoman-generator": "^1.0.0",
