--- a/package.json
+++ b/package.json
@@ -65,9 +65,9 @@
     "parse5": "^2.2.3",
     "plylog": "^0.4.0",
     "polylint": "^2.10.0",
-    "polymer-analyzer": "2.0.0-alpha.24",
-    "polymer-build": "^0.8.1",
-    "polymer-linter": "^0.1.2",
+    "polymer-analyzer": "2.0.0-alpha.27",
+    "polymer-build": "^0.8.2",
+    "polymer-linter": "0.1.4",
     "polymer-project-config": "^2.0.0",
     "polyserve": "^0.16.0",
     "request": "^2.72.0",
