--- a/src/init/element/templates/polymer-2.x/bower.json
+++ b/src/init/element/templates/polymer-2.x/bower.json
@@ -4,12 +4,15 @@
 <% } -%>
   "main": "<%= name %>.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#2.0-preview"
+    "polymer": "Polymer/polymer#^2.0.0-rc.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#2.0-preview",
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#2.0-preview",
     "web-component-tester": "v6.0.0-prerelease.5",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#v1"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0-rc.4"
+  },
+  "resolutions": {
+    "polymer": "^2.0.0-rc.1"
   }
 }
