--- a/package.json
+++ b/package.json
@@ -63,9 +63,9 @@
     "merge-stream": "^1.0.1",
     "parse5": "^2.2.3",
     "plylog": "^0.4.0",
-    "polymer-analyzer": "2.0.0-alpha.33",
-    "polymer-build": "^0.9.0",
-    "polymer-linter": "1.0.0",
+    "polymer-analyzer": "2.0.0-alpha.34",
+    "polymer-build": "0.9.1",
+    "polymer-linter": "1.0.1",
     "polymer-project-config": "^2.0.0",
     "polyserve": "^0.16.0",
     "request": "^2.72.0",
