* update bower.json to latest polymer and web components dependencies * remove iron-component-page and iron-demo-helpers dependencies since they should be opt-in.

--- a/src/init/application/templates/polymer-2.x/bower.json
+++ b/src/init/application/templates/polymer-2.x/bower.json
@@ -4,15 +4,10 @@
 <% } -%>
   "main": "index.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0-rc.2"
+    "polymer": "Polymer/polymer#^2.0.0-rc.3"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#2.0-preview",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#2.0-preview",
-    "web-component-tester": "v6.0.0-prerelease.5",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#1.0.0-rc.5"
-  },
-  "resolutions": {
-    "polymer": "^2.0.0-rc.2"
+    "web-component-tester": "^6.0.0-prerelease.5",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0-rc.7"
   }
 }
